# dummymaster

./: CMakeLists.txt
include/: account.hpp  game_server.hpp  game_session.hpp  player_session.hpp  players_server.hpp
include/game_state/: initial_state.hpp  profile_exists_state.hpp  state.hpp
include/player_state/: initial_state.hpp  right_credentials_state.hpp  state.hpp  wrong_credentials_state.hpp
src/: account.cpp  game_server.cpp  game_session.cpp  main.cpp  player_session.cpp  players_server.cpp
src/game_state/: initial_state.cpp  profile_exists_state.cpp  state.cpp
src/player_state/: initial_state.cpp  right_credentials_state.cpp  state.cpp  wrong_credentials_state.cpp
